--- a/client/src/component/dashboardRightSide.css
+++ b/client/src/component/dashboardRightSide.css
@@ -43,8 +43,10 @@
 }
 
 .to-do-board-list {
-    display: flex;
     padding: 25px 0 25px 40px;
     height: 100%;
-    overflow-x: scroll;
+}
+
+.to-do-main {
+    display: flex;
 }
