--- a/client/src/component/artsection.css
+++ b/client/src/component/artsection.css
@@ -9,17 +9,17 @@
 }
 
 .art-img-bg {
-    background: #16393e;
+    /* background: #16393e; */
     border-radius: 50%;
     margin-bottom: 70px;
     position: relative;
-    padding: 30% 10% 10% 30%;
+    padding: 25%;
 }
 
 .art-icon-img {
     position: absolute;
-    left: 55px;
-    top: 115px;
+    left: 13%;
+    top: 30%;
 }
 
 .left-quote-one {
