--- a/client/src/component/dashboardRightSide.css
+++ b/client/src/component/dashboardRightSide.css
@@ -37,6 +37,13 @@
     color: #707070;
 }
 
+.duration-select {
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;    
+}
+
 .duration-select, :focus-visible {
     border: 0;
     outline: none;
@@ -49,4 +56,7 @@
 
 .to-do-main {
     display: flex;
+    overflow-x: scroll;
+    scrollbar-color: #9CB7C5 white;
+    border-radius: 10px;
 }
